.gsd.migrating/exec/1ef88ba7-ca39-4818-88dc-0d265193c217.stderr
   Compiling cmt-rs v0.1.0 (/mnt/j/cmt-rs)
error[E0204]: the trait `Copy` cannot be implemented for this type
   --> src/services/downgrader.rs:497:12
    |
496 | #[derive(Debug, Clone, Copy)]
    |                        ---- in this derive macro expansion
497 | pub struct...tionRequest<'a> {
    |           ...^^^^^^^^^^^
...
505 |    ...ion<String>,
    |    ...----------- this field does not implement `Copy`
    |
note: the `Copy` impl for `std::option::Option<std::string::String>` requires that `std::string::String: Copy`
   --> src/services/downgrader.rs:505:32
    |
505 | ...t: Option<String>,
    |       ^^^^^^^^^^^^^^


thread 'rustc' (157626) panicked at /rustc-dev/59807616e1fa2540724bfbac14d7976d7e4a3860/library/core/src/slice/index.rs:1031:55:
slice index starts at 33 but ends at 32
stack backtrace:
   0:     0x78c79f19314b - <<std[e28293b1aa0f68bd]::sys::backtrace::BacktraceLock>::print::DisplayBacktrace as core[c1f1a4ba060b9bfa]::fmt::Display>::fmt
   1:     0x78c79f81f408 - core[c1f1a4ba060b9bfa]::fmt::write
   2:     0x78c7a0d683b6 - <std[e28293b1aa0f68bd]::sys::stdio::unix::Stderr as std[e28293b1aa0f68bd]::io::Write>::write_fmt
   3:     0x78c79f169238 - std[e28293b1aa0f68bd]::panicking::default_hook::{closure#0}
   4:     0x78c79f1865b3 - std[e28293b1aa0f68bd]::panicking::default_hook
   5:     0x78c79e15cc30 - std[e28293b1aa0f68bd]::panicking::update_hook::<alloc[fdfd2bd8633a6659]::boxed::Box<rustc_driver_impl[e4ca9dd5dd6cf2a8]::install_ice_hook::{closure#1}>>::{closure#0}
   6:     0x78c79f186892 - std[e28293b1aa0f68bd]::panicking::panic_with_hook
   7:     0x78c79f1692f8 - std[e28293b1aa0f68bd]::panicking::panic_handler::{closure#0}
   8:     0x78c79f160029 - std[e28293b1aa0f68bd]::sys::backtrace::__rust_end_short_backtrace::<std[e28293b1aa0f68bd]::panicking::panic_handler::{closure#0}, !>
   9:     0x78c79f16ad5d - __rustc[b7974e8690430dd9]::rust_begin_unwind
  10:     0x78c79bede82c - core[c1f1a4ba060b9bfa]::panicking::panic_fmt
  11:     0x78c79cf0875d - core[c1f1a4ba060b9bfa]::slice::index::slice_index_fail
  12:     0x78c79da7fae5 - <annotate_snippets[7d52211d2f32161f]::renderer::styled_buffer::StyledBuffer>::replace
  13:     0x78c7a0b337b7 - annotate_snippets[7d52211d2f32161f]::renderer::render::render
  14:     0x78c7a0d81e06 - <rustc_errors[795cd5cf46ddce51]::annotate_snippet_emitter_writer::AnnotateSnippetEmitter>::emit_messages_default
  15:     0x78c7a0d79420 - <rustc_errors[795cd5cf46ddce51]::annotate_snippet_emitter_writer::AnnotateSnippetEmitter as rustc_errors[795cd5cf46ddce51]::emitter::Emitter>::emit_diagnostic
  16:     0x78c7a0d7c976 - <rustc_errors[795cd5cf46ddce51]::json::Diagnostic>::from_errors_diagnostic
  17:     0x78c7a0d7c0ef - <rustc_errors[795cd5cf46ddce51]::json::JsonEmitter as rustc_errors[795cd5cf46ddce51]::emitter::Emitter>::emit_diagnostic
  18:     0x78c7a0d71661 - <rustc_errors[795cd5cf46ddce51]::DiagCtxtInner>::emit_diagnostic::{closure#3}
  19:     0x78c7a0d6f440 - rustc_interface[c8170c4b7b680ee8]::callbacks::track_diagnostic::<core[c1f1a4ba060b9bfa]::option::Option<rustc_span[e3c9a1967c4921fd]::ErrorGuaranteed>>
  20:     0x78c7a0d6e4ee - <rustc_errors[795cd5cf46ddce51]::DiagCtxtInner>::emit_diagnostic
  21:     0x78c7a0d6e39d - <rustc_errors[795cd5cf46ddce51]::DiagCtxtHandle>::emit_diagnostic
  22:     0x78c7a0d6b168 - <rustc_span[e3c9a1967c4921fd]::ErrorGuaranteed as rustc_errors[795cd5cf46ddce51]::diagnostic::EmissionGuarantee>::emit_producing_guarantee
  23:     0x78c79ef66e1a - <rustc_trait_selection[79d0130c2732d367]::error_reporting::TypeErrCtxt>::report_selection_error
  24:     0x78c79da503d6 - <rustc_trait_selection[79d0130c2732d367]::error_reporting::TypeErrCtxt>::report_fulfillment_errors
  25:     0x78c7a05bc2e5 - rustc_hir_typeck[df4419f0f7cd7713]::typeck_with_inspect::{closure#0}
  26:     0x78c7a05b1df2 - rustc_query_impl[b21371cac9e22a84]::query_impl::typeck::invoke_provider_fn::__rust_begin_short_backtrace
  27:     0x78c79f93c1fc - rustc_query_impl[b21371cac9e22a84]::execution::try_execute_query::<rustc_data_structures[2c167692117eb14d]::vec_cache::VecCache<rustc_span[e3c9a1967c4921fd]::def_id::LocalDefId, rustc_middle[9956b31dc9b62104]::query::erase::ErasedData<[u8; 8usize]>, rustc_middle[9956b31dc9b62104]::dep_graph::graph::DepNodeIndex>, true>
  28:     0x78c79f93b5f0 - rustc_query_impl[b21371cac9e22a84]::query_impl::typeck::execute_query_incr::__rust_end_short_backtrace
  29:     0x78c79fd68b88 - <rustc_middle[9956b31dc9b62104]::ty::context::TyCtxt>::par_hir_body_owners::<rustc_hir_analysis[1442f5e3e8e9992f]::check_crate::{closure#2}>::{closure#0}
  30:     0x78c79fd685a9 - rustc_hir_analysis[1442f5e3e8e9992f]::check_crate
  31:     0x78c79f9367d3 - rustc_interface[c8170c4b7b680ee8]::passes::analysis
  32:     0x78c7a0dec447 - rustc_query_impl[b21371cac9e22a84]::execution::try_execute_query::<rustc_middle[9956b31dc9b62104]::query::caches::SingleCache<rustc_middle[9956b31dc9b62104]::query::erase::ErasedData<[u8; 0usize]>>, true>
  33:     0x78c7a0debdb4 - rustc_query_impl[b21371cac9e22a84]::query_impl::analysis::execute_query_incr::__rust_end_short_backtrace
  34:     0x78c7a0a5632d - rustc_interface[c8170c4b7b680ee8]::interface::run_compiler::<(), rustc_driver_impl[e4ca9dd5dd6cf2a8]::run_compiler::{closure#0}>::{closure#1}
  35:     0x78c7a0a2663e - std[e28293b1aa0f68bd]::sys::backtrace::__rust_begin_short_backtrace::<rustc_interface[c8170c4b7b680ee8]::util::run_in_thread_with_globals<rustc_interface[c8170c4b7b680ee8]::util::run_in_thread_pool_with_globals<rustc_interface[c8170c4b7b680ee8]::interface::run_compiler<(), rustc_driver_impl[e4ca9dd5dd6cf2a8]::run_compiler::{closure#0}>::{closure#1}, ()>::{closure#0}, ()>::{closure#0}::{closure#0}, ()>
  36:     0x78c7a0a26ca0 - <std[e28293b1aa0f68bd]::thread::lifecycle::spawn_unchecked<rustc_interface[c8170c4b7b680ee8]::util::run_in_thread_with_globals<rustc_interface[c8170c4b7b680ee8]::util::run_in_thread_pool_with_globals<rustc_interface[c8170c4b7b680ee8]::interface::run_compiler<(), rustc_driver_impl[e4ca9dd5dd6cf2a8]::run_compiler::{closure#0}>::{closure#1}, ()>::{closure#0}, ()>::{closure#0}::{closure#0}, ()>::{closure#1} as core[c1f1a4ba060b9bfa]::ops::function::FnOnce<()>>::call_once::{shim:vtable#0}
  37:     0x78c7a0a27b2c - <std[e28293b1aa0f68bd]::sys::thread::unix::Thread>::new::thread_start
  38:     0x78c79a29caa4 - <unknown>
  39:     0x78c79a329c6c - <unknown>
  40:                0x0 - <unknown>

error: the compiler unexpectedly panicked. This is a bug

note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md

note: rustc 1.95.0 (59807616e 2026-04-14) running on x86_64-unknown-linux-gnu

note: compiler flags: --crate-type bin -C embed-bitcode=no -C debuginfo=2 -C incremental=[REDACTED]

note: some of the compiler flags provided by cargo are hidden

query stack during panic:
#0 [typeck] type-checking `bind_downgrader_worker_sink`
#1 [analysis] running analysis passes on crate `cmt_rs`
end of query stack
Some errors have detailed explanations: E0204, E0277.
For more information about an error, try `rustc --explain E0204`.
error: could not compile `cmt-rs` (bin "cmt-rs") due to 1 previous error
